[gd_scene format=3 uid="uid://main-menu"]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scripts/UIButtonFeedback.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
script = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimatedBackground" type="ColorRect" parent="MainMenu"]
anchors_preset = 15
color = Color(0.05, 0.08, 0.18)

[node name="BackgroundPulse" type="Tween" parent="MainMenu"]

[node name="TitleGroup" type="CenterContainer" parent="MainMenu"]
anchors_preset = 5
margin_left = 120
margin_right = -120
margin_top = 180
margin_bottom = -180

[node name="TitlePanel" type="Panel" parent="TitleGroup"]
anchors_preset = 15
margin_left = 0
margin_top = 0
margin_right = 0
margin_bottom = 0
theme = null

[node name="TitleVBox" type="VBoxContainer" parent="TitlePanel"]
anchors_preset = 15
margin_left = 40
margin_top = 40
margin_right = -40
margin_bottom = -40
separation = 18

[node name="GameTitle" type="Label" parent="TitleVBox"]
custom_fonts/font = null
text = "Memory Tiles Rush"
align = 1
valign = 0

[node name="Tagline" type="Label" parent="TitleVBox"]
text = "Calm focus meets kinetic polish"
align = 1
valign = 0
custom_fonts/font = null

[node name="ButtonGroup" type="VBoxContainer" parent="TitleVBox"]
separation = 12

[node name="StartGame" type="Button" parent="ButtonGroup"]
script = ExtResource( 2 )
text = "Start Game"

[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]

[node name="Modes" type="Button" parent="ButtonGroup"]
script = ExtResource( 2 )
text = "Modes"

[connection signal="pressed" from="Modes" to="." method="_on_Modes_pressed"]

[node name="Settings" type="Button" parent="ButtonGroup"]
script = ExtResource( 2 )
text = "Settings"

[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
